workaround for Java/Surefire bug